--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BibiMoney</title>
+    <meta name="description" content="BibiMoney - Займы под залог ПТС" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="BibiMoney" />
+    <meta property="og:description" content="BibiMoney - Займы под залог ПТС" />
+    <name property="og:url" content="https://bibimoney.ru/" />
+    <name property="og:image" content="https://bibimoney.ru/logo.png" />
+    <title>BibiMoney - Займы под залог ПТС</title>
   </head>
   <body>
     <div id="root"></div>
