--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="BibiMoney" />
     <meta property="og:description" content="BibiMoney - Займы под залог ПТС" />
-    <name property="og:url" content="https://bibimoney.ru/" />
-    <name property="og:image" content="https://bibimoney.ru/logo.png" />
+    <meta property="og:url" content="https://bibimoney.ru/" />
+    <meta property="og:image" content="https://bibimoney.ru/logo.png" />
     <title>BibiMoney - Займы под залог ПТС</title>
   </head>
   <body>
