upgrade opengraph image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="BibiMoney" />
     <meta property="og:description" content="BibiMoney - Займы под залог ПТС" />
     <meta property="og:url" content="https://bibimoney.ru/" />
-    <meta property="og:image" content="https://bibimoney.ru/logo.png" />
+    <meta property="og:image" content="https://bibimoney.ru/opengraph-image.jpg" />
     <title>BibiMoney - Займы под залог ПТС</title>
   </head>
   <body>
